--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-hot-toast": "^2.6.0",
+    "react-scroll-parallax": "^3.5.0",
     "recharts": "^3.5.1",
     "sonner": "^2.0.7",
+    "swiper": "^12.0.3",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.13"
   },
