--- a/env.example
+++ b/env.example
@@ -1,8 +1,1 @@
-# API Configuration
-# Copy this file to .env.local and fill in your values
-
-# Backend API URL
-NEXT_PUBLIC_API_URL=http://localhost:8000/api
-
-# Add your API keys here (optional)
-# NEXT_PUBLIC_API_KEY=your-api-key
+NEXT_PUBLIC_API_URL=
